fix not showing image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("/assets/img/wrap/1111.jfif");
+    background-image: url("./assets/img/wrap/1111.jfif");
     background-repeat: no-repeat;
     /* background-size: cover; */
     background-position: top center;
